# yaru-remix

./: README.md  install.md  meson.build  meson_options.txt
gnome-shell/Yaru-remix-dark/gnome-shell/: gnome-shell.css
gnome-shell/Yaru-remix-light/gnome-shell/: gnome-shell-high-contrast.css  gnome-shell.css
gnome-shell/Yaru-remix/gnome-shell/: gnome-shell.css
gtk/src/dark/gtk-3.20/: gtk.scss
gtk/src/default/gtk-3.20/: _apps.scss  _common.scss  _headerbar.scss  _tweaks.scss  gtk.scss
gtk/src/default/gtk-3.20/granite/: _back-button.scss
gtk/src/light/gtk-3.20/: gtk.scss
icons/Yaru-remix/: icon-theme.cache
icons/Yaru-remix-dark/: index.theme
icons/src-dark/fullcolor/: render-bitmaps.py
icons/src-dark/symlinks/fullcolor/: mimetypes.list
icons/src-light/fullcolor/: render-bitmaps.py
icons/src/fullcolor/: render-bitmaps.py
icons/src/scalable/: package-lock.json
icons/src/symlinks/fullcolor/: apps.list
icons/src/symlinks/symbolic/: apps.list
themes/Yaru-remix-dark/gtk-3.0/: gtk.gresource
themes/Yaru-remix-dark/gtk-3.20/: gtk.gresource
themes/Yaru-remix-light/gtk-3.0/: gtk.gresource
themes/Yaru-remix-light/gtk-3.20/: gtk.gresource
themes/Yaru-remix/gtk-3.0/: gtk.gresource
themes/Yaru-remix/gtk-3.20/: gtk.gresource
