option('icons', type: 'boolean', value: true, description:'build icons component')
option('gnome-shell', type: 'boolean', value: true, description:'build gnome-shell component')
option('gtk', type: 'boolean', value: true, description:'build gtk component')

option('default', type: 'boolean', value: true, description:'build Yaru gtk default variant')
option('dark', type: 'boolean', value: true, description:'build Yaru gtk dark variant')
option('light', type: 'boolean', value: true, description:'build Yaru gtk light variant')
